# ChatBot-Agentic-AI-project-using-Langgraph

./: README.md  app.py  main.py  pyproject.toml
AINews/: daily_summary.md  monthly_summary.md  weekly_summary.md
src/langgraphs_agentic_ai/: main.py
src/langgraphs_agentic_ai/graphs/: graphs_builder.py
src/langgraphs_agentic_ai/llms/: groqllm.py
src/langgraphs_agentic_ai/nodes/: ai_news_nodes.py  basic_chatbot_node.py  chatbot_node_with_tools.py
src/langgraphs_agentic_ai/states/: state.py
src/langgraphs_agentic_ai/tools/: search_tool.py
src/langgraphs_agentic_ai/ui/: config_ui.ini  config_ui.py
src/langgraphs_agentic_ai/ui/streamlit/: display_result.py  load_ui.py
